# buckets

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  Readme.md  go.mod  go.sum
.github/workflows/: rust.yml
cmd/: bucket.go
internal/pkg/buckets/: check.go  commit.go  create.go  del.go  expect.go  get.go  info.go  init.go  link.go  list.go  rename.go  restore.go  revert.go  root.go  set.go  stash.go  version.go
internal/pkg/rules/: rules.go
olivier/.buckets/: config
src/: main.rs
src/commands/: commit.rs  create.rs  init.rs  mod.rs  status.rs  version.rs
src/data/: bucket.rs  commit.rs  data_structs.rs  mod.rs
src/tools/: file_creator.rs  main.rs
src/utils/: checks.rs  config.rs  errors.rs  meta.rs  mod.rs  utils.rs
tests/: test_cli_commit.rs  test_cli_create.rs  test_cli_init.rs  test_cli_version.rs
