[package]
name = "buckets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = [] }
tempfile = "3.9.0"
chrono = { version = "0.4", features = [] }
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }

[[bin]]
name = "buckets"
path = "src/main.rs"

[[bin]]
name = "tools"
path = "src/tools/main.rs"

