[package]
name = "buckets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = [] }
tempfile = "3.9.0"
chrono = { version = "0.4", features = [] }
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
tempdir = "0.3.7"
walkdir = "2.4.0"
md5 = "0.7.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde_derive = "1.0.193"
sha1 = "0.11.0-pre.2"
zstd = "0.13.0"
blake3 = "1.5.0"
assert_cmd = "2.0.13"
predicates = "2.1.5"

[[bin]]
name = "buckets"
path = "src/main.rs"

[[bin]]
name = "tools"
path = "src/tools/main.rs"

